# django-automated-auth-testing

./: .gitignore  README.md  pyproject.toml
automated_auth_testing/config/: settings.py
automated_auth_testing/tests/: conftest.py  helpers.py  test_automated_auth.py
config/: settings.py
polls/migrations/: 0001_initial.py
tests/: conftest.py  enums.py  test_automated_auth.py
