[tool.poetry]
name = "django-automated-auth-testing"
version = "0.1.0"
description = ""
authors = ["Steven Pate <steven@laac.dev>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
